--- a/index.html
+++ b/index.html
@@ -4,50 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script defer src="./js/app.js"></script>
     <title>Zeke Brustkern</title>
 
 </head>
 
 <header>
-    <button class="nav" id="hamburger"></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Where to?</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Zeke</a>
+              <a class="nav-link" href="#qubic">Qubic</a>
+              <a class="nav-link" href="#checkers">Checkers</a>
+              <a class="nav-link" href="#LPS">LPS</a>
+              <a class="nav-link" href="#contact">Contact</a>
+              <!-- <a class="nav-link disabled">Disabled</a> -->
+            </div>
+          </div>
+        </div>
+      </nav>
 </header>
 
 <body>
-    <div class="card">
-    <img src="../assets/zeke-headshot.jpg" alt="A dashingly handsome developer">
-    <div class="name">Zeke Brustkern</div>
-    <div class="description"  id= "about-me">
-        My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private Repos but here are some learning exercises I've dont over the years.
+<div class=".mx-auto p-2">
+    <div class="card text-bg-primary mb-3" style="width: 18rem;">
+        <img src="../assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
+        <div class="card-body">
+          <h5 class="card-title " >Zeke Brustkern</h5>
+          <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private repos but here are some learning exercises I've done over the years.</p>
+          <a href="https://github.com/zbrustkern" class="stretched-link"></a>
+        </div>
+      </div>
+
+
+    <div class="card text-bg-primary mb-3" id="qubic" style="width: 18rem;">
+        <img src="../assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
+        <div class="card-body">
+            <h5 class="card-title">Qubic</h5>
+            <p class="card-text">Qubic is a three dimensional version of tic tac toe.</p>
+            <a href="https://zbrustkern.github.io/qubic/" class="stretched-link"></a>
+        </div>
     </div>
+
+    <div class="card text-bg-primary mb-3" id="checkers"  style="width: 18rem;">
+        <img src="../assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
+        <div class="card-body">
+            <h5 class="card-title">Checkers</h5>
+            <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
+            <a href="https://zbrustkern.github.io/checkTwo/" class="stretched-link"></a>
+        </div>
     </div>
-    <div class="card" id="qubic">
-    <img src="../assets/qubic-screenshot.png" alt="Synthwave three dimensional tic tac toe">
-    <div class="name">Qubic</div>
-    <div class="description"  id= "qubic">
-        Qubic is a three dimensional version of tic tac toe.
+
+    <div class="card text-bg-primary mb-3" id="LPS"  style="width: 18rem;">
+        <img src="../assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
+        <div class="card-body">
+            <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
+            <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
+            <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
+        </div>
     </div>
+
+    <div class="card text-bg-info mb-3" id="contact"  style="width: 18rem;">
+        <img src="" class="card-img-top" alt="">
+        <div class="card-body">
+            <h5 class="card-title">Contact Me</h5>
+            <p class="card-text">Want to get in touch? <a href=mailto:zbrustkern@gmail.com>Reach out!</a></p>
+        </div>
     </div>
-    <div class="card" id="checkers">
-    <img src="../assets/checkers-screenshot.png" alt="Black and red checkers board">
-    <div class="name">Checkers</div>
-    <div class="description"  id= "checkers">
-        Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!
-    </div>
-    </div>
-    <div class="card" id="LPS">
-    <img src="../assets/LPS-screenshot.jpeg" alt="A Rock, scroll of papyrus, and a scalpel">
-    <div class="name">Lapis, Papyrus, Scalpellus</div>
-    <div class="description"  id= "LPS">
-        Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.
-    </div>
-    </div>
-    <div class="card" id="contact">
-    <img src="" alt="">
-    <div class="name">Contact</div>
-    <div class="description"  id= "contact">
-        Want to get in touch? <a href=mailto:zbrustkern@gmail.com>Reach out!</a>
-    </div>
-    </div>
+
+</div>
 </body>
 </html>
