fixed paths for imgs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 <div class=".mx-auto p-2">
     <div class="card text-bg-primary mb-3" style="width: 18rem;">
-        <img src="../assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
+        <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
         <div class="card-body">
           <h5 class="card-title " >Zeke Brustkern</h5>
           <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private repos but here are some learning exercises I've done over the years.</p>
@@ -45,7 +45,7 @@
 
 
     <div class="card text-bg-primary mb-3" id="qubic" style="width: 18rem;">
-        <img src="../assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
+        <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
         <div class="card-body">
             <h5 class="card-title">Qubic</h5>
             <p class="card-text">Qubic is a three dimensional version of tic tac toe.</p>
@@ -54,7 +54,7 @@
     </div>
 
     <div class="card text-bg-primary mb-3" id="checkers"  style="width: 18rem;">
-        <img src="../assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
+        <img src="assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
         <div class="card-body">
             <h5 class="card-title">Checkers</h5>
             <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="card text-bg-primary mb-3" id="LPS"  style="width: 18rem;">
-        <img src="../assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
+        <img src="assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
         <div class="card-body">
             <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
             <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
