--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script defer src="./js/app.js"></script>
     <title>Zeke Brustkern</title>
@@ -34,7 +35,7 @@
 
 <body>
 <div class=".mx-auto p-2">
-    <div class="card text-bg-primary mb-3" style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 shadow" id="about me" style="width: 18rem;">
         <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
         <div class="card-body">
           <h5 class="card-title " >Zeke Brustkern</h5>
@@ -44,7 +45,7 @@
       </div>
 
 
-    <div class="card text-bg-primary mb-3" id="qubic" style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 shadow" id="qubic" style="width: 18rem;">
         <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
         <div class="card-body">
             <h5 class="card-title">Qubic</h5>
@@ -53,7 +54,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3" id="checkers"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 shadow" id="checkers"  style="width: 18rem;">
         <img src="assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
         <div class="card-body">
             <h5 class="card-title">Checkers</h5>
@@ -62,7 +63,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3" id="LPS"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 shadow" id="LPS"  style="width: 18rem;">
         <img src="assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
         <div class="card-body">
             <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
@@ -71,14 +72,13 @@
         </div>
     </div>
 
-    <div class="card text-bg-info mb-3" id="contact"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 shadow" id="contact"  style="width: 18rem;">
         <img src="" class="card-img-top" alt="">
         <div class="card-body">
             <h5 class="card-title">Contact Me</h5>
             <p class="card-text">Want to get in touch? <a href=mailto:zbrustkern@gmail.com>Reach out!</a></p>
         </div>
     </div>
-
 </div>
 </body>
 </html>
