--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/thumbnail.jpeg">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script defer src="./js/app.js"></script>
     <title>Zeke Brustkern</title>
-
+<!-- Open Graph meta data-->
+    <meta property="og:title" content="It's Not Zeke" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://notZeke.com" />
+    <meta property="og:image" content="assets/thumbnails.jpeg" />
+    <meta property="og:description" content="If they asked who, it's not Zeke." />
+ 
 </head>
 
 <header>
