--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <img src="" class="card-img-top" alt="">
         <div class="card-body">
             <h5 class="card-title">Contact Me</h5>
-            <p class="card-text">Want to get in touch? <a href=mailto:zbrustkern@gmail.com>Reach out!</a></p>
+            <p class="card-text">Want to get in touch? <a href="mailto:zbrustkern@gmail.com" class="stretched-link"></a></p>
         </div>
     </div>
 </div>
