centered and autofilled cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
 <div class=".mx-auto p-2">
-    <div class="card text-bg-primary mb-3 shadow" id="about me" style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="about me">
         <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
         <div class="card-body">
           <h5 class="card-title " >Zeke Brustkern</h5>
@@ -52,7 +52,7 @@
       </div>
 
 
-    <div class="card text-bg-primary mb-3 shadow" id="qubic" style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
         <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
         <div class="card-body">
             <h5 class="card-title">Qubic</h5>
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3 shadow" id="checkers"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="checkers">
         <img src="assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
         <div class="card-body">
             <h5 class="card-title">Checkers</h5>
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3 shadow" id="LPS"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="LPS">
         <img src="assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
         <div class="card-body">
             <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3 shadow" id="contact"  style="width: 18rem;">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="contact">
         <img src="" class="card-img-top" alt="">
         <div class="card-body">
             <h5 class="card-title">Contact Me</h5>
