--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
         <div class="card-body">
           <h5 class="card-title " >Zeke Brustkern</h5>
-          <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private repos but here are some learning exercises I've done over the years.</p>
+          <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private repos but here are some projects I've done over the years.</p>
           <a href="https://github.com/zbrustkern" class="stretched-link"></a>
         </div>
       </div>
@@ -78,6 +78,15 @@
             <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
         </div>
     </div>
+
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="LPS">
+      <img src="assets/chemfinder-screenshot.png" class="card-img-top" alt="Some Ruby Code describing controllers">
+      <div class="card-body">
+          <h5 class="card-title">ChemFinder (Ruby on Rails) </h5>
+          <p class="card-text">One of my first full stack projects, no longer actively maintained.</p>
+          <a href="https://github.com/zbrustkern/chemfindertwo" class="stretched-link"></a>
+      </div>
+  </div>
 
     <div class="card text-bg-primary mb-3 mx-auto shadow" id="contact">
         <img src="" class="card-img-top" alt="">
