updated nav bar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <a class="nav-link" href="#qubic">Qubic</a>
               <a class="nav-link" href="#checkers">Checkers</a>
               <a class="nav-link" href="#LPS">LPS</a>
+              <a class="nav-link" href="#chemfinder">ChemFinder</a>
               <a class="nav-link" href="#contact">Contact</a>
               <!-- <a class="nav-link disabled">Disabled</a> -->
             </div>
@@ -79,7 +80,7 @@
         </div>
     </div>
 
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="LPS">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="chemfinder">
       <img src="assets/chemfinder-screenshot.png" class="card-img-top" alt="Some Ruby Code describing controllers">
       <div class="card-body">
           <h5 class="card-title">ChemFinder (Ruby on Rails) </h5>
