--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 <body>
 <div class=".mx-auto p-2">
+  
     <div class="card text-bg-primary mb-3 mx-auto shadow" id="about me">
         <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
         <div class="card-body">
@@ -51,6 +52,15 @@
           <a href="https://github.com/zbrustkern" class="stretched-link"></a>
         </div>
       </div>
+
+      <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
+        <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
+        <div class="card-body">
+            <h5 class="card-title">LifTracker</h5>
+            <p class="card-text">LifTracker is an all-in-on solution for tracking your weightlifiting stats and designing workouts to improve them.</p>
+            <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
+        </div>
+    </div>
 
 
     <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
