html id bug fix udpated liftracker

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
+      <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
         <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
         <div class="card-body">
             <h5 class="card-title">LifTracker</h5>
