added wrench collective

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Zeke</a>
+              <a class="nav-link" href="#wrench-collective">The Wrench Collective</a>
+              <a class="nav-link" href="#liftracker">Liftracker</a>
               <a class="nav-link" href="#qubic">Qubic</a>
               <a class="nav-link" href="#checkers">Checkers</a>
               <a class="nav-link" href="#LPS">LPS</a>
@@ -53,6 +55,15 @@
         </div>
       </div>
 
+      <div class="card text-bg-primary mb-3 mx-auto shadow" id="wrench-collective">
+        <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
+        <div class="card-body">
+            <h5 class="card-title">The Wrench Collective</h5>
+            <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof.</p>
+            <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
+        </div>
+    </div>
+
       <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
         <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
         <div class="card-body">
@@ -61,7 +72,6 @@
             <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
         </div>
     </div>
-
 
     <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
         <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
