added group attribution

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
         <div class="card-body">
             <h5 class="card-title">The Wrench Collective</h5>
-            <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof.</p>
+            <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof. This project was a group effort with <a href="https://github.com/Zecrim">@Zecrim</a> and <a href="https://github.com/cmonckton2626">@cmonckton2626</a>.</p>
             <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
         </div>
     </div>
@@ -68,7 +68,7 @@
         <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
         <div class="card-body">
             <h5 class="card-title">LifTracker</h5>
-            <p class="card-text">LifTracker is an all-in-on solution for tracking your weightlifiting stats and designing workouts to improve them.</p>
+            <p class="card-text">LifTracker is an all-in-one solution for tracking your weightlifiting stats and designing workouts to improve them.</p>
             <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
         </div>
     </div>
