added moar square

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Zeke</a>
+              <a class="nav-link" href="#moar-square">MoarSquare</a>
               <a class="nav-link" href="#wrench-collective">The Wrench Collective</a>
               <a class="nav-link" href="#liftracker">Liftracker</a>
               <a class="nav-link" href="#qubic">Qubic</a>
@@ -55,7 +56,16 @@
         </div>
       </div>
 
-      <div class="card text-bg-primary mb-3 mx-auto shadow" id="wrench-collective">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="moar-square">
+        <img src="assets/moarsquare-screenshot.png" class="card-img-top" alt="A screenshot of a social media checkin app">
+        <div class="card-body">
+            <h5 class="card-title">Moar Square</h5>
+            <p class="card-text">Why stop at Four? With Moar Square, you can check in, share your location with your friends, and comment on everyone's checkins while seeing their location on an interactive map.</p>
+            <a href="https://moar-square.netlify.app/posts" class="stretched-link"></a>
+        </div>
+    </div>
+
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="wrench-collective">
         <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
         <div class="card-body">
             <h5 class="card-title">The Wrench Collective</h5>
@@ -64,7 +74,7 @@
         </div>
     </div>
 
-      <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
+    <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
         <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
         <div class="card-body">
             <h5 class="card-title">LifTracker</h5>
