consolidated sizing and added contact image

--- a/index.html
+++ b/index.html
@@ -45,87 +45,106 @@
 </header>
 
 <body>
-<div class=".mx-auto p-2">
-  
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="about me">
-        <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
-        <div class="card-body">
-          <h5 class="card-title " >Zeke Brustkern</h5>
-          <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Most of my work lives in private repos but here are some projects I've done over the years.</p>
-          <a href="https://github.com/zbrustkern" class="stretched-link"></a>
+  <div class="container">
+    <div class="row row-cols-auto flex-wrap">
+      <div class="col-sm-12 col-md-4">
+          <div class="card text-bg-primary mb-3 mx-auto shadow" id="about me">
+            <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
+            <div class="card-body">
+              <h5 class="card-title " >Zeke Brustkern</h5>
+              <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. My favorite is the combination of Python's Flask and React!</p>
+              <a href="https://github.com/zbrustkern" class="stretched-link"></a>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="moar-square">
+            <img src="assets/moarsquare-screenshot.png" class="card-img-top" alt="A screenshot of a social media checkin app">
+            <div class="card-body">
+                <h5 class="card-title">Moar Square</h5>
+                <p class="card-text">Why stop at Four? With Moar Square, you can check in, share your location with your friends, and comment on everyone's checkins while seeing their location on an interactive map.</p>
+                <a href="https://moar-square.netlify.app/posts" class="stretched-link"></a>
+            </div>
         </div>
       </div>
 
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="moar-square">
-        <img src="assets/moarsquare-screenshot.png" class="card-img-top" alt="A screenshot of a social media checkin app">
-        <div class="card-body">
-            <h5 class="card-title">Moar Square</h5>
-            <p class="card-text">Why stop at Four? With Moar Square, you can check in, share your location with your friends, and comment on everyone's checkins while seeing their location on an interactive map.</p>
-            <a href="https://moar-square.netlify.app/posts" class="stretched-link"></a>
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="wrench-collective">
+            <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
+            <div class="card-body">
+                <h5 class="card-title">The Wrench Collective</h5>
+                <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof. This project was a group effort with <a href="https://github.com/Zecrim">@Zecrim</a> and <a href="https://github.com/cmonckton2626">@cmonckton2626</a>.</p>
+                <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
+            </div>
         </div>
-    </div>
+       </div>
 
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="wrench-collective">
-        <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
-        <div class="card-body">
-            <h5 class="card-title">The Wrench Collective</h5>
-            <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof. This project was a group effort with <a href="https://github.com/Zecrim">@Zecrim</a> and <a href="https://github.com/cmonckton2626">@cmonckton2626</a>.</p>
-            <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
+            <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
+            <div class="card-body">
+                <h5 class="card-title">LifTracker</h5>
+                <p class="card-text">LifTracker is an all-in-one solution for tracking your weightlifiting stats and designing workouts to improve them. Get fit with LifTracker.</p>
+                <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
+            </div>
         </div>
-    </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="liftracker">
-        <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
-        <div class="card-body">
-            <h5 class="card-title">LifTracker</h5>
-            <p class="card-text">LifTracker is an all-in-one solution for tracking your weightlifiting stats and designing workouts to improve them.</p>
-            <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
-        </div>
-    </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
-        <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
-        <div class="card-body">
-            <h5 class="card-title">Qubic</h5>
-            <p class="card-text">Qubic is a three dimensional version of tic tac toe.</p>
-            <a href="https://zbrustkern.github.io/qubic/" class="stretched-link"></a>
-        </div>
-    </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="checkers">
-        <img src="assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
-        <div class="card-body">
-            <h5 class="card-title">Checkers</h5>
-            <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
-            <a href="https://zbrustkern.github.io/checkTwo/" class="stretched-link"></a>
-        </div>
-    </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="LPS">
-        <img src="assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
-        <div class="card-body">
-            <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
-            <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
-            <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
-        </div>
-    </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="chemfinder">
-      <img src="assets/chemfinder-screenshot.png" class="card-img-top" alt="Some Ruby Code describing controllers">
-      <div class="card-body">
-          <h5 class="card-title">ChemFinder (Ruby on Rails) </h5>
-          <p class="card-text">One of my first full stack projects, no longer actively maintained.</p>
-          <a href="https://github.com/zbrustkern/chemfindertwo" class="stretched-link"></a>
       </div>
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="qubic">
+            <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
+            <div class="card-body">
+                <h5 class="card-title">Qubic</h5>
+                <p class="card-text">Qubic is a three dimensional version of tic tac toe. The entire app runs in the browser with HTML, CSS, and JavaScript.</p>
+                <a href="https://zbrustkern.github.io/qubic/" class="stretched-link"></a>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="checkers">
+            <img src="assets/checkers-screenshot.png" class="card-img-top" alt="Black and red checkers board">
+            <div class="card-body">
+                <h5 class="card-title">Checkers</h5>
+                <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
+                <a href="https://zbrustkern.github.io/checkTwo/" class="stretched-link"></a>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="LPS">
+            <img src="assets/LPS-screenshot.jpeg" class="card-img-top" alt="A Rock, scroll of papyrus, and a scalpel">
+            <div class="card-body">
+                <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
+                <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
+                <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+          <div class="card text-bg-primary mb-3 mx-auto shadow" id="chemfinder">
+            <img src="assets/chemfinder-screenshot.png" class="card-img-top" alt="Some Ruby Code describing controllers">
+            <div class="card-body">
+                <h5 class="card-title">ChemFinder (Ruby on Rails) </h5>
+                <p class="card-text">One of my first full stack projects, no longer actively maintained.</p>
+                <a href="https://github.com/zbrustkern/chemfindertwo" class="stretched-link"></a>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+          <div class="card text-bg-primary mb-3 mx-auto shadow" id="contact">
+              <img src="assets/contact-me.jpeg" class="card-img-top" alt="">
+              <div class="card-body">
+                  <h5 class="card-title">Contact Me</h5>
+                  <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p>
+              </div>
+          </div>
+      </div>
+      
+    </div>
   </div>
-
-    <div class="card text-bg-primary mb-3 mx-auto shadow" id="contact">
-        <img src="" class="card-img-top" alt="">
-        <div class="card-body">
-            <h5 class="card-title">Contact Me</h5>
-            <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p>
-        </div>
-    </div>
-</div>
 </body>
 </html>
