--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="card-body">
                 <h5 class="card-title">Moar Square</h5>
                 <p class="card-text">Why stop at Four? With Moar Square, you can check in, share your location with your friends, and comment on everyone's checkins while seeing their location on an interactive map.</p>
-                <a href="https://moar-square.netlify.app/posts" class="stretched-link"></a>
+                <a href="https://moar-square.netlify.app/" class="stretched-link"></a>
             </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
               <img src="assets/contact-me.jpeg" class="card-img-top" alt="">
               <div class="card-body">
                   <h5 class="card-title">Contact Me</h5>
-                  <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p>
+                  <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p><hr>
               </div>
           </div>
       </div>
