--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Zeke</a>
+              <a class="nav-link" href="#tophat">Tophat Financial</a>
               <a class="nav-link" href="#moar-square">MoarSquare</a>
               <a class="nav-link" href="#wrench-collective">The Wrench Collective</a>
               <a class="nav-link" href="#liftracker">Liftracker</a>
@@ -52,10 +53,23 @@
             <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
             <div class="card-body">
               <h5 class="card-title " >Zeke Brustkern</h5>
-              <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. My favorite is the combination of Python's Flask and React!</p>
+              <div class="badges"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="HTML Badge"></div>
+              <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. Lately I've been testing my deployment chops on Google Cloud, Netlify, Vercel, and Heroku.</p>
               <a href="https://github.com/zbrustkern" class="stretched-link"></a>
             </div>
           </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="tophat">
+            <img src="assets/tophat_financial.jpg" class="card-img-top" alt="Logo for Tophat Financial">
+            <div class="card-body">
+                <h5 class="card-title">Tophat Financial</h5>
+                <div class="badges"><img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React Badge"> <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" alt="Typescript Badge"> <img src="https://img.shields.io/badge/Google_Cloud-4285F4?style=for-the-badge&logo=google-cloud&logoColor=white" alt="Google Cloud Badge"></div>
+                <p class="card-text">Work in progress. Build a financial plan for your future. Use the income calculator to estimate your future cash flow given your income, savings, and expected return.</p>
+                <a href="https://planner-cac2a.web.app/" class="stretched-link"></a>
+            </div>
+        </div>
       </div>
 
       <div class="col-sm-12 col-md-4">
@@ -63,6 +77,7 @@
             <img src="assets/moarsquare-screenshot.png" class="card-img-top" alt="A screenshot of a social media checkin app">
             <div class="card-body">
                 <h5 class="card-title">Moar Square</h5>
+                <div class="badges"><img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React Badge"> <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" alt="Flask Badge"> <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" alt="PostgreSQL Badge"></div>
                 <p class="card-text">Why stop at Four? With Moar Square, you can check in, share your location with your friends, and comment on everyone's checkins while seeing their location on an interactive map.</p>
                 <a href="https://moar-square.netlify.app/" class="stretched-link"></a>
             </div>
@@ -74,6 +89,7 @@
             <img src="assets/wrench-collective-screenshot.png" class="card-img-top" alt="A screenshot of a car tracking app">
             <div class="card-body">
                 <h5 class="card-title">The Wrench Collective</h5>
+                <div class="badges"><img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React Badge"> <img src="https://img.shields.io/badge/Express.js-404D59?style=for-the-badge" alt="Express.js Badge"> <img src="https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&logo=mongodb&logoColor=white" alt="Mongo DB Badge"></div>
                 <p class="card-text">The Wrench Collective is a community of car enthusiasts sharing details of their cars, their garages, and discussion thereof. This project was a group effort with <a href="https://github.com/Zecrim">@Zecrim</a> and <a href="https://github.com/cmonckton2626">@cmonckton2626</a>.</p>
                 <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
             </div>
@@ -85,6 +101,7 @@
             <img src="assets/liftracker-screenshot.png" class="card-img-top" alt="A barbell logo for LifTracker">
             <div class="card-body">
                 <h5 class="card-title">LifTracker</h5>
+                <div class="badges"><img src="https://img.shields.io/badge/Node.js-43853D?style=for-the-badge&logo=node.js&logoColor=white" alt="Node.js Badge"> <img src="https://img.shields.io/badge/Express.js-404D59?style=for-the-badge" alt="Express.js Badge"> <img src="https://img.shields.io/badge/MongoDB-4EA94B?style=for-the-badge&logo=mongodb&logoColor=white" alt="Mongo DB Badge"></div>
                 <p class="card-text">LifTracker is an all-in-one solution for tracking your weightlifiting stats and designing workouts to improve them. Get fit with LifTracker.</p>
                 <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
             </div>
@@ -95,7 +112,8 @@
             <img src="assets/qubic-screenshot.png" class="card-img-top" alt="Synthwave three dimensional tic tac toe">
             <div class="card-body">
                 <h5 class="card-title">Qubic</h5>
-                <p class="card-text">Qubic is a three dimensional version of tic tac toe. The entire app runs in the browser with HTML, CSS, and JavaScript.</p>
+                <div class="badges"><img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML Badge"> <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS Badge"> <img src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E" alt="Javascript Badge"></div>
+                <p class="card-text">Qubic is a three dimensional version of tic tac toe. This game runs completely in the browser. Bonus points if you and a friend can reach a tie!</p>
                 <a href="https://zbrustkern.github.io/qubic/" class="stretched-link"></a>
             </div>
         </div>
@@ -139,10 +157,20 @@
               <img src="assets/contact-me.jpeg" class="card-img-top" alt="">
               <div class="card-body">
                   <h5 class="card-title">Contact Me</h5>
-                  <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p><hr>
+                  <p class="card-text">Want to get in touch? <a href="mailto:info@notzeke.com" class="stretched-link"></a></p>
               </div>
           </div>
       </div>
+
+      <div class="col-sm-12 col-md-4">
+        <div class="card text-bg-primary mb-3 mx-auto shadow" id="contact">
+            <img src="assets/LinkedIn_logo_initials.png" class="card-img-top" alt="">
+            <div class="card-body">
+                <h5 class="card-title">LinkedIN</h5>
+                <p class="card-text">Professional Networking <a href="https://linkedin.com/in/zekebrustkern" class="stretched-link"></a>
+            </div>
+        </div>
+    </div>
       
     </div>
   </div>
