removed visit button on weatherwise classic

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <h5 class="card-title">Cloudy With a Chance of Chaos Probability</h5>
               <p class="card-text">Envirobuild 2024 Hackathon Winner, this app provides disaster preparedness information localized to the user with info, tips, and advice on what to do in case of geological emergencies.</p>
               <div class="badges"><img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React Badge"> <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" alt="Typescript Badge"> <img src="https://img.shields.io/badge/Google_Cloud-4285F4?style=for-the-badge&logo=google-cloud&logoColor=white" alt="Google Cloud Badge"></div>
-              <a href="https://moar-square.netlify.app/" class="btn btn-primary stretched-link">View Project</a>
+              <a href="https://moar-square.netlify.app/" class="stretched-link"></a>
             </div>
         </div>
       </div>
