fixed watherwise link

--- a/test.html
+++ b/test.html
@@ -79,7 +79,7 @@
                             <span class="badge">Next.js</span>
                             <span class="badge">PostgreSQL</span>
                         </div>
-                        <a href="https://moar-square.netlify.app/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://water-wars-psi.vercel.app" class="btn btn-primary stretched-link">View Project</a>
                     </div>
                 </div>
             </div>
