removed test buttons

--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@
                             <span class="badge">TypeScript</span>
                             <span class="badge">Google Cloud</span>
                         </div>
-                        <a href="https://planner-cac2a.web.app/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://planner-cac2a.web.app/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                             <span class="badge">Next.js</span>
                             <span class="badge">PostgreSQL</span>
                         </div>
-                        <a href="https://water-wars-psi.vercel.app" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://water-wars-psi.vercel.app" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                             <span class="badge">Flask</span>
                             <span class="badge">PostgreSQL</span>
                         </div>
-                        <a href="https://moar-square.netlify.app/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://moar-square.netlify.app/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                             <span class="badge">Express.js</span>
                             <span class="badge">MongoDB</span>
                         </div>
-                        <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://the-wrench-collective-b3c568642add.herokuapp.com/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                             <span class="badge">Express.js</span>
                             <span class="badge">MongoDB</span>
                         </div>
-                        <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://liftracker-68f4ba8f13b2.herokuapp.com/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                             <span class="badge">CSS</span>
                             <span class="badge">JavaScript</span>
                         </div>
-                        <a href="https://zbrustkern.github.io/qubic/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://zbrustkern.github.io/qubic/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Checkers</h5>
                         <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
-                        <a href="https://zbrustkern.github.io/checkTwo/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://zbrustkern.github.io/checkTwo/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Lapis, Papyrus, Scalpellus</h5>
                         <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
-                        <a href="https://zbrustkern.github.io/LPS/" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ChemFinder (Ruby on Rails)</h5>
                         <p class="card-text">One of my first full stack projects, no longer actively maintained.</p>
-                        <a href="https://github.com/zbrustkern/chemfindertwo" class="btn btn-primary stretched-link">View Project</a>
+                        <a href="https://github.com/zbrustkern/chemfindertwo" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Contact Me</h5>
                         <p class="card-text">Want to get in touch?</p>
-                        <a href="mailto:info@notzeke.com" class="btn btn-primary stretched-link">Email Me</a>
+                        <a href="mailto:info@notzeke.com" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     <div class="card-body">
                         <h5 class="card-title">LinkedIn</h5>
                         <p class="card-text">Professional Networking</p>
-                        <a href="https://linkedin.com/in/zekebrustkern" class="btn btn-primary stretched-link">View Profile</a>
+                        <a href="https://linkedin.com/in/zekebrustkern" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
