added weatherwise to nav and corrected name

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Zeke</a>
               <a class="nav-link" href="#tophat">Tophat Financial</a>
+              <a class="nav-link" href="#weatherwise">WeatherWise</a>
               <a class="nav-link" href="#moar-square">MoarSquare</a>
               <a class="nav-link" href="#wrench-collective">The Wrench Collective</a>
               <a class="nav-link" href="#liftracker">Liftracker</a>
@@ -76,7 +77,7 @@
         <div class="card text-bg-primary mb-3 mx-auto shadow" id="weatherwise">
           <img src="assets/weatherwise-screenshot.png" class="card-img-top" alt="A screenshot of disaster preparedness app">
           <div class="card-body">
-              <h5 class="card-title">Cloudy With a Chance of Chaos Probability</h5>
+              <h5 class="card-title">WeatherWise</h5>
               <p class="card-text">Envirobuild 2024 Hackathon Winner, this app provides disaster preparedness information localized to the user with info, tips, and advice on what to do in case of geological emergencies.</p>
               <div class="badges"><img src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" alt="React Badge"> <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white" alt="Typescript Badge"> <img src="https://img.shields.io/badge/next.js-000000?style=for-the-badge&logo=nextdotjs&logoColor=white" alt="Nextjs Badge"></div>
               <a href="https://water-wars-psi.vercel.app" class="stretched-link"></a>
