--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
             <div class="card-body">
               <h5 class="card-title " >Zeke Brustkern</h5>
-              <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. Lately I've been testing my deployment chops on Google Cloud, Netlify, Vercel, and Heroku.</p>
+              <p class="card-text">My name is Zeke Brustkern. I like building things- quantitative finance models, enterprise software, and consumer facing applications. Here are some personal projects showcasing a variety of technologies. Lately I've been building using React, TypeScript, and Python.</p>
               <div class="badges"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="HTML Badge"></div>
               <a href="https://github.com/zbrustkern" class="stretched-link"></a>
             </div>
