added badges to all projects

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <div class="card-body">
                 <h5 class="card-title">Checkers</h5>
                 <p class="card-text">Checkers: classic board game. This version stays true to real life and doesn't prevent you from cheating!</p>
+                <div class="badges"><img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML Badge"> <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS Badge"> <img src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E" alt="Javascript Badge"></div>
                 <a href="https://zbrustkern.github.io/checkTwo/" class="stretched-link"></a>
             </div>
         </div>
@@ -149,6 +150,7 @@
             <div class="card-body">
                 <h5 class="card-title">Lapis, Papyrus, Scalpellus </h5>
                 <p class="card-text">Translated to English: Rock, Paper, Scissors! In this version you play against a randomizer.</p>
+                <div class="badges"><img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML Badge"> <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS Badge"> <img src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E" alt="Javascript Badge"></div>
                 <a href="https://zbrustkern.github.io/LPS/" class="stretched-link"></a>
             </div>
         </div>
@@ -160,6 +162,7 @@
             <div class="card-body">
                 <h5 class="card-title">ChemFinder (Ruby on Rails) </h5>
                 <p class="card-text">One of my first full stack projects, no longer actively maintained.</p>
+                <div class="badges"><img src="https://img.shields.io/badge/Ruby-CC342D?style=for-the-badge&logo=ruby&logoColor=white" alt="Ruby Badge"> <img src="https://img.shields.io/badge/Ruby_on_Rails-CC0000?style=for-the-badge&logo=ruby-on-rails&logoColor=white" alt="Ruby on Rails Badge"></div>
                 <a href="https://github.com/zbrustkern/chemfindertwo" class="stretched-link"></a>
             </div>
         </div>
