--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <meta property="og:title" content="It's Not Zeke" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://notZeke.com" />
-    <meta property="og:image" content="assets/thumbnails.jpeg" />
+    <meta property="og:image" content="assets/thumbnail.jpeg" />
     <meta property="og:description" content="If they asked who, it's not Zeke." />
  
 </head>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary opacity-75">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Where to?</a>
+          <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,6 +47,7 @@
 </header>
 
 <body>
+  <canvas id="starfield"></canvas>
   <div class="container">
     <div class="row row-cols-auto flex-wrap">
       <div class="col-sm-12 col-md-4">
@@ -190,5 +191,52 @@
       
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+      // Starfield animation
+      const canvas = document.getElementById('starfield');
+      const ctx = canvas.getContext('2d');
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+
+      const stars = [];
+      for (let i = 0; i < 100; i++) {
+          stars.push({
+              x: Math.random() * canvas.width,
+              y: Math.random() * canvas.height,
+              radius: Math.random() * 1.5,
+              vx: Math.floor(Math.random() * 50) - 25,
+              vy: Math.floor(Math.random() * 50) - 25
+          });
+      }
+
+      function draw() {
+          ctx.clearRect(0, 0, canvas.width, canvas.height);
+          ctx.globalCompositeOperation = "lighter";
+
+          for (let i = 0, x = stars.length; i < x; i++) {
+              const s = stars[i];
+
+              ctx.fillStyle = "#00ffff";
+              ctx.beginPath();
+              ctx.arc(s.x, s.y, s.radius, 0, 2 * Math.PI);
+              ctx.fill();
+
+              s.x += s.vx / 30;
+              s.y += s.vy / 30;
+
+              if (s.x < 0 || s.x > canvas.width) s.vx = -s.vx;
+              if (s.y < 0 || s.y > canvas.height) s.vy = -s.vy;
+          }
+      }
+
+      function animate() {
+          draw();
+          requestAnimationFrame(animate);
+      }
+
+      animate();
+  </script>
 </body>
 </html>
