changed main photo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="row row-cols-auto flex-wrap">
       <div class="col-sm-12 col-md-4">
           <div class="card text-bg-primary mb-3 mx-auto shadow" id="about me">
-            <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
+            <img src="assets/postcard.png" class="card-img-top" alt="A dashingly handsome developer">
             <div class="card-body">
               <h5 class="card-title " >Zeke Brustkern</h5>
               <p class="card-text">My name is Zeke Brustkern. I like building things- quantitative finance models, enterprise software, and consumer facing applications. Here are some personal projects with a variety of technologies.</p>
