updated the fun page

--- a/fun.html
+++ b/fun.html
@@ -43,7 +43,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div id="zeke" class="card h-100">
-                    <img src="assets/zeke-headshot.jpg" class="card-img-top" alt="A dashingly handsome developer">
+                    <img src="assets/postcard.png" class="card-img-top" alt="A dashingly handsome developer">
                     <div class="card-body">
                         <h5 class="card-title">Zeke Brustkern</h5>
                         <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. Lately I've been testing my deployment chops on Google Cloud, Netlify, Vercel, and Heroku.</p>
